--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="registrationForm" (ngSubmit)="registerUser()" novalidate>
-  <!-- <div formGroupName="createProfileDto"> -->
+<!-- <form [formGroup]="registrationForm" (ngSubmit)="registerUser()" novalidate>
+  <div formGroupName="createProfileDto">
     <div class="card m-auto mt-5">
       <div class="card-body bg-light">
         <h5 class="card-title">Register</h5>
@@ -109,9 +109,9 @@
           <button class="btn btn-success" type="submit" [disabled]="!registrationForm.valid">Register</button>
         </div>
       </div>
-    </div>
-  <!-- </div> -->
-  <!-- <div formGroupName="createProfileDto">
+    </div> -->
+<!-- </div> -->
+<!-- <div formGroupName="createProfileDto">
     <div class="mb-3 form-group">
       <label for="email" class="form-label">Email </label>
       <input type="email" class="form-control" email formControlName="email" name="email" placeholder="email"
@@ -133,4 +133,6 @@
       </div>
     </div>
   </div> -->
-</form>
+<!-- </form> -->
+
+<h1>Register</h1>
